# data_pipeline

./: .gitignore  Dockerfile.test  Makefile  README.md  azure-pipelines-check-integration.yml  azure-pipelines-check.yml  azure-pipelines-deploy.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: lab-to-gold.instructions.md  new-blob-entity.instructions.md  pipeline-metadata.instructions.md  pipeline-sql.instructions.md  python.instructions.md
archive/function/: job_function_deploy.py  job_function_inspect.py  job_function_run.py  silver_companies.py
archive/spark/: job_spark_deploy.py  job_spark_inspect.py  job_spark_run.py  pipeline_spark_deploy.py  run_transformation.py
docs/: myhr-hierarchy-History.md  pipeline-activity-limit.md  secrets-management.md
jobs/notebook/: run_transformation.ipynb
reports/2008_ops_appeal/: query_aggregated.sql  query_raw.sql  query_refined.sql  results_comparison.py
reports/2027_decisions/: query_aggregated.sql  query_raw.sql  query_refined.sql
scripts/: deploy_copyjob.py  inspect_pipeline.py  job_notebook_deploy.py  job_notebook_run.py  keyvault_secret_set.py  pipeline_deploy.py  pipeline_run.py  print_dependency_graph.py  test_entra_users_live.py
src/tag_data_engineering/: __init__.py  constants.py  metadata_schema.py  models.py
src/tag_data_engineering/connectors/: fabric_lakehouse_connector.py  lakehouse_connector.py  local_lakehouse_connector.py
src/tag_data_engineering/deployment/: __init__.py  build_utils.py  fabric_connection.py  fabric_deployment.py  fabric_serialization.py
src/tag_data_engineering/extractors/: base_extractor.py  blob_extractor.py  copyjob_extractor.py  entra_users_extractor.py  models.py  mysql_extractor.py  postgres_extractor.py  rest_api_extractor.py  sql_server_extractor.py  sqlalchemy_extractor.py  verint_adherence_extractor.py
src/tag_data_engineering/pipeline/: models.py  pipeline_discoverer.py
src/tag_data_engineering/runners/: lab_runner.py  landing_copyjob_normalize_runner.py  landing_runner.py  setup_runner.py  transformation_runner.py
src/tag_data_engineering/secrets/: azure_secret_provider.py  fabric_notebook_credential.py  (+2 more)
tests/: conftest.py
tests/test_deployment/: test_fabric_serialization.py
tests/test_extractors/: test_blob_extractor.py  test_mysql_extractor.py  test_postgres_extractor.py  test_rest_api_extractor.py  test_sql_server_extractor.py  test_verint_adherence_extractor.py
tests/test_pipeline/: test_pipeline_discovery.py
tests/test_runners/: __init__.py  test_landing_copyjob_normalize_runner.py  test_landing_runner.py  test_setup_runner.py  test_transformation_runner.py
tests_integration/: conftest.py  pipeline_executor.py  test_full_pipeline.py
(+395 files in other folders)
